# js_wasm_api

./: .gitignore  index.ts
wasm_test/: Cargo.toml
wasm_test/src/: lib.rs
