[package]
name = "wasm_test"
version = "0.1.0"
authors = ["lescuer97 <leoescuer@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# serde = {version = "1.0", features = ["derive"]}
wasm-bindgen = "0.2"